# sentiment

./: .gitignore  README.md  values.yaml
docker/: README.md  api.json  sentiment.py
docker/facebook/: Dockerfile  README.md  app.py  developer.md  package-lock.json  package.json  requirements.txt  serverless.yml
docker/facebook/static/: index.html
docker/facebook/static/css/: main.css
docker/facebook/templates/: index.html
docker/sentiment/: .dockerignore  Dockerfile  LICENSE  README.md  requirements.txt  setup.cfg
docker/sentiment/src/sentiment/: __init__.py  __main__.py
docker/youtube/: Dockerfile  README.md  app.py  developer.md  miniapp.py  package-lock.json  package.json  requirements.txt  serverless.yml
docker/youtube/templates/: index.html
etls/: .gitignore  .mypy.ini  README.md  collect.py  requirements.txt  screen_names.csv  sentiment.py  twitter.py
etls/facebook/: .mypy.ini  README.md  collect.py  facebook_metrics.csv  instagram_metrics.csv  requirements.txt  sample_env
etls/instagram/: README.md  metrics.csv
etls/istac/: README.md  collect.py  istac.ini.sample  requirements.txt
etls/twitter/: README.md  collect.py  mispell.csv  requirements.txt  sample_env  sentiment.py  stopwords.csv  terms.csv  twitter.py  twitter_api.py  twitter_sentiment.py
etls/youtube/: .mypy.ini  README.md  channel_metrics.csv  collect.py  reports_metrics.csv  requirements.txt  sample_env
helm/: README.md
helm/login/: Chart.yaml  README.md  values.yaml
helm/login/templates/: _helpers.tpl  certificate.yaml  configmap.yaml  deployment.yaml  facebook.yaml  ingress.yaml  secret.yaml  service.yaml  youtube.yaml
helm/sentiment/: Chart.yaml  LICENSE.txt  README.md  values.yaml
helm/sentiment/templates/: _helpers.tpl  certificate.yaml  configmap.yaml  secret.yaml  service.yaml
image/: Dockerfile  requirements.txt  sentiment.py
libs/orion/: README.md  requirements.txt  setup.cfg
libs/orion/src/orion/: __init__.py  __main__.py
templates/: configmap.yaml  deployment.yaml  ingress.yaml
