[metadata]
name = sentiment
version = 1.0.0
author = WarpcomDEV
author_email = support@warpcom.com
description = BERT-Based sentiment analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/warpcomdev/sentiment
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.6
install_requires =
    attrs
    de-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-2.3.0/de_core_news_sm-2.3.0.tar.gz
    en-core-web-sm  @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
    es-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-2.3.1/es_core_news_sm-2.3.1.tar.gz
    fr-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-2.3.0/fr_core_news_sm-2.3.0.tar.gz
    it-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/it_core_news_sm-2.3.0/it_core_news_sm-2.3.0.tar.gz
    pt-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/pt_core_news_sm-2.3.0/pt_core_news_sm-2.3.0.tar.gz
    Flask
    Flask-Cors
    Flask-HTTPAuth
    flask-swagger
    gunicorn
    hunspell
    jsonschema
    numpy
    python-dotenv
    spacy
    tokenizers
    torch
    transformers

[options.packages.find]
where=src
